fix : color-contrast

--- a/Input-component/input.css
+++ b/Input-component/input.css
@@ -12,7 +12,7 @@
 }
 
 .err{
-    color: red;
+    color: #9d0404;
 }
 .correct{
     color: green;
